<resources>
    <string name="app_name">Pokemon Selector</string>
    <string name="PokemonList">Pokemon List</string>
    <string name="SelectPokemon">Select Your Pokemon</string>
    <string name="SelectedPokemon">Selected Pokemon:</string>
    <string name="SelectOpponent">Select Opponent</string>
    <string name="SelectedOpponent">Selected Opponent:</string>
    <string name="next">Next</string>
</resources>