<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/select_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectPokemon"
        app:layout_constraintBottom_toTopOf="@+id/but_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/SelectPokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_pokemon" />

    <TextView
        android:id="@+id/txt_selected_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectedPokemon"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/select_pokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />



    <Button
        android:id="@+id/but_select_opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectOpponent"
        app:layout_constraintBottom_toTopOf="@+id/but_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_pokemon" />

    <TextView
        android:id="@+id/txt_selected_opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectedOpponent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/select_pokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_selected_pokemon" />
</androidx.constraintlayout.widget.ConstraintLayout>